--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,7 @@ baseURL = 'http://www.home.openauthority.net/'
 languageCode = 'en-us'
 title = 'Openauthority.net'
 author = 'L.J. Hanson'
-description = "I/'m a US-based technologist and these are primarily a collection
-of notes for myself that others may find useful."
+description = "I'm a US-based technologist and these are primarily a collection of notes for myself that others may find useful."
 # avatar =
 # menu_item_separator =
 # favicon =
